uniond/vendor/github.com/supranational/blst/bindings/blst_aux.h

typedef struct {} blst_uniq;
typedef struct blst_opaque blst_uniq;
void blst_derive_child_eip2333(blst_scalar *out_SK, const blst_scalar *SK,
                               uint32_t child_index);
void blst_scalar_from_hexascii(blst_scalar *out, const byte *hex);
void blst_fr_from_hexascii(blst_fr *ret, const byte *hex);
void blst_fp_from_hexascii(blst_fp *ret, const byte *hex);
size_t blst_p1_sizeof(void);
size_t blst_p1_affine_sizeof(void);
size_t blst_p2_sizeof(void);
size_t blst_p2_affine_sizeof(void);
size_t blst_fp12_sizeof(void);
/*
 * Single-shot SHA-256 hash function.
 */
void blst_sha256(byte out[32], const byte *msg, size_t msg_len);