uniond/vendor/github.com/supranational/blst/bindings/rust/src/bindings.rs

extern "C" {
    pub fn blst_derive_child_eip2333(
        out_SK: *mut blst_scalar,
        SK: *const blst_scalar,
        child_index: u32,
    );
}
extern "C" {
    pub fn blst_scalar_from_hexascii(out: *mut blst_scalar, hex: *const byte);
}
extern "C" {
    pub fn blst_fr_from_hexascii(ret: *mut blst_fr, hex: *const byte);
}
extern "C" {
    pub fn blst_fp_from_hexascii(ret: *mut blst_fp, hex: *const byte);
}
extern "C" {
    pub fn blst_p1_sizeof() -> usize;
}
extern "C" {
    pub fn blst_p1_affine_sizeof() -> usize;
}
extern "C" {
    pub fn blst_p2_sizeof() -> usize;
}
extern "C" {
    pub fn blst_p2_affine_sizeof() -> usize;
}
extern "C" {
    pub fn blst_fp12_sizeof() -> usize;
}
extern "C" {
    pub fn blst_sha256(out: *mut byte, msg: *const byte, msg_len: usize);
}
#[test]
fn bindgen_test_normal_types() {
    // from "Rust for Rustaceans" by Jon Gjengset
    fn is_normal<T: Sized + Send + Sync + Unpin>() {}
    is_normal::<BLST_ERROR>();
    is_normal::<blst_scalar>();
    is_normal::<blst_fr>();
    is_normal::<blst_fp>();
    is_normal::<blst_fp2>();
    is_normal::<blst_fp6>();
    is_normal::<blst_fp12>();
    is_normal::<blst_p1>();
    is_normal::<blst_p1_affine>();
    is_normal::<blst_p2>();
    is_normal::<blst_p2_affine>();
    is_normal::<blst_pairing>();
    is_normal::<blst_uniq>();
}
